2005-10-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond.fedora.spec.in (Group): add lilypond-internals to
	dist.

	* lily/tuplet-bracket.cc: check columns of bounds, not bounds
	themselves.

2005-10-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/virtual-methods.hh (VIRTUAL_COPY_CONSTRUCTOR):
	add class_name() method.

	* lily/music-scheme.cc: remove ly:music-name.

2005-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/postinstall-lilypond.sh: Remove cruft.

	* cygwin/postremove-lilypond.sh: Remove.

	* cygwin/GNUmakefile (default): Remove postremove rules.

2005-10-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/titling-init.ly (evenHeaderMarkup): use space in header on
	even header too.6
	
	* scm/define-markup-commands.scm (wordwrap-string): bugfix for
	MacOS 9 users.

	* lily/hara-kiri-group-spanner.cc (consider_suicide): only
	consider break index for broken spanner.

	* scm/define-markup-commands.scm (wordwrap-string): remove \r
	characters from string before splitting.

2005-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (output-preview-framework): use
	is-book-title to determine whether to chop off the booktitle.

	* lily/paper-book.cc (systems): init from book-title-properties
	(add_score_title): init score-title-properties.

	* ly/paper-defaults.ly: add {score,book}-title-properties.

	* scm/document-backend.scm (lookup-interface): error message if
	using unknown interface.

	* lily/volta-bracket.cc (after_line_breaking): new function. Set
	edge-height.

	* lily/horizontal-bracket.cc (make_enclosing_bracket): rename from
	make_bracket.
	(make_bracket): new function.

	* scm/lily.scm (define-scheme-options): add paper-size option.

	* ly/declarations-init.ly (laissezVibrer): get paper size from
	-dpaper-size

	* scm/translation-functions.scm: use \fontsize for changing the
	fontsize.

	* scm/define-grobs.scm (all-grob-descriptions): set
	between-length-limit to 1.0
