@@ -28,6 +28,7 @@ Jamie Bullock
 D. Josiah Boothby
 Kieren MacMillan
 Kris Shaffer
+Milan Zamazal
 Nancho Alvarez
 Nicolas Sceaux
 Steve Doonan
